# POSIX-Shell-in-C

./: Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile  Makefile.am  Makefile.in
src/.deps/: 42sh-42sh.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h
src/ast/.deps/: libast_a-ast.Po
src/eval/: Makefile  Makefile.am  Makefile.in  builtins.c  builtins.h  exec_tree.c  exec_tree.h  pipe.c  redir.c  redir.h
src/eval/.deps/: libeval_a-builtins.Po  libeval_a-exec_tree.Po  libeval_a-pipe.Po  libeval_a-redir.Po
src/lexer/: Makefile  Makefile.am  Makefile.in  lexer.h  lexer2.c  token.h
src/lexer/.deps/: liblex_a-lexer2.Po
src/parser/: Makefile  Makefile.am  Makefile.in  parser.h  parser2.c
src/parser/.deps/: libpars_a-parser2.Po
tests/: Makefile  Makefile.am  Makefile.in  test.py
tests/scripts/: dot.sh  echo_escaped.sh  export_unset.sh  functions.sh  funny_escaped.sh  if_quoted_keyword.sh  many_redirections.sh  spaces.sh  tricky_echo.sh  variables.sh
tests/tests/: ACCEPT.yml  ALIAS.yml  BUILTINS.yml  CASE.yml  COMMAND_SUB_AND_IFS.yml  FOR.yml  IF.yml  PIPE.yml  REDIRECT.yml  REJECT.yml  SCRIPTS.yml  SPECIALS.yml
